# ragify

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  package.json  shopify.app.toml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  logging.py  main.py
backend/app/routers/: auth.py
backend/app/services/: chunking.py  embeddings.py  models.py  shopify.py  shopify_auth.py
backend/tests/: conftest.py  test_chunking.py  test_embeddings.py  test_models.py  test_shopify.py
doc/: cahier-des-charges-rag-shopify.md
